--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,3 +98,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .msg {
+    @apply rounded-lg bg-slate-50 px-3 py-2 text-center text-base font-medium text-slate-500;
+  }
+  .msg-error {
+    @apply bg-rose-100 text-rose-600;
+  }
+  .msg-success {
+    @apply bg-emerald-100 text-emerald-600;
+  }
+  .msg-ns {
+    @apply bg-[#fffaf1] text-[#746C5B];
+  }
+}
